# pdfx

./: .gitignore  Cargo.toml  LICENSE  README.md  RELEASE_NOTES.md  build-cross.sh  pdfx-v0.1.0-x86_64-apple-darwin
.github/workflows/: ci.yml  release.yml  security-audit.yml
src/: dash.rs  lib.rs  main.rs  types.rs
src/cli/: README.md  args.rs  commands.rs
src/database/: database.rs  db.rs
src/export/: exporter.rs
src/helpers/: help.rs
src/indexer/: indexer.rs  scanner.rs
