[package]
name = "pdfx"
version = "0.1.0"
edition = "2021"
authors = ["ions <zara.leonardo@gmail.com>"]
license = "MIT"
description = "A lightning-fast terminal-native PDF indexing and search toolkit"
readme = "README.md"
homepage = "https://github.com/ionnss/pdfx"
repository = "https://github.com/ionnss/pdfx"
keywords = ["pdf", "search", "indexing", "cli", "terminal"]
categories = ["command-line-utilities", "filesystem"]
exclude = [
    "assets/*",
    ".github/*",
    "*.png",
    "*.jpg"
]

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.46", features = ["derive"] }
dirs = "6.0.0"
indicatif = "0.18.0"

rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = "1.0.219"
walkdir = "2.5.0"
